# bharatX

./: .gitignore  .vercelignore  Dockerfile  Makefile  README.md  VERCEL_DEPLOYMENT.md  demo_search.py  main.py  pyproject.toml  requirements.txt  start.sh
app/access_control/: authentication.py  decorators.py  schema.py
app/config/: config.py  search_config.py
app/entities/: search.py
app/interface/: routes.py
app/interface/apis/: health.py  search.py
app/services/: search.py
app/utils/: country.py  http.py  response.py  serialization.py
frontend/src/: App.tsx  search-dashboard.tsx
