[project]
name = "bharatx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "basicauth>=1.0.0",
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "googlesearch-python>=1.3.0",
    "html5lib>=1.1",
    "lxml>=6.0.0",
    "requests>=2.32.4",
    "ruff>=0.12.2",
    "uvicorn>=0.35.0",
]
